# huffcreate

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE  Makefile  README.md  bintree.c  bintree.h  build.sh  defines.h  huffman.c  huffman.h  list.c  list.h  main.c  rle.h
test_vectors/: test_vectors.txt
